_sass/_layout.scss
/**
 * Site header
 */
.site-header {
  border-bottom: 1px solid $grey-color-light;
  min-height: 44px;
  padding-top: 0;
  padding-bottom: 0;
  background-color: $background-color;

  @include media-query($on-mobile) {
    padding-top: 0;
    padding-bottom: 0;
  }

  // Positioning context for the mobile navigation icon
  position: relative;

  .wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1080px;
  }
}

.site-title {
  font-size: 16px;
  font-weight: bold;
  line-height: 44px;
  letter-spacing: 0;
  float: none;
  display: block;
  padding: 0;

  &,
  &:visited {
    color: $grey-color-dark;
  }

  &:hover {
    color: $text-color;
    text-decoration: none;
  }
}

/**
 * Site nav
 */
.site-nav {
  z-index: 10;
  float: none;
  line-height: 1;

  .menu-icon {
    display: none;
  }

  .menu {
    display: flex;
    align-items: center;
    gap: 14px;
  }

  .page-link {
    border: 1px solid transparent;
    color: $grey-color-dark;
    font-size: 13px;
    font-weight: bold;
    line-height: 44px;
    padding: 0;

    // Gaps between nav items, but not on the first one
    &:not(:first-child) {
      margin-left: 0;
    }

    &:hover {
      color: $text-color;
      text-decoration: underline;
      background-color: transparent;
      border-color: transparent;
    }
  }

  @include media-query($on-mobile) {
    position: absolute;
    top: 12px;
    right: 24px;

    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;
    background-color: #fff;

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 4px;
      text-align: center;

      background: #ffffff url($base-url + '/assets/img/menu.png') 6px 4px no-repeat;
      background-size: 26px 26px;
    }

    .menu {
      clear: both;
      display: none;
      background-color: #ffffff;
      min-width: 10em;
      padding-bottom: 5px;
    }

    .page-link {
      font-size: 16px;
      display: block;
      padding: 6px 16px;
    }
  }
}

@include media-query($on-mobile) {
  .site-header .wrapper {
    display: block;
  }

  .site-title {
    line-height: 44px;
    padding: 0;
  }
}

/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding: $spacing-unit 0;

  @include media-query($on-mobile) {
    padding-top: 10px;
  }
}

.footer-heading {
  font-size: 18px;
  margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  font-size: 15px;
  color: $grey-color;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1,
.footer-col-2,
.footer-col-3 {
  width: -webkit-calc(33% - (#{$spacing-unit} / 2));
  width: calc(33% - (#{$spacing-unit} / 2));
}

.follow-links > .social-link {
  flex: 0 50%;
}

.powered-by {
  font-size: 13px !important;
  color: $grey-color;
}

@include media-query($on-mobile) {
  .footer-col {
    float: none;
    width: 100%;
  }
}

/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
}

.page-heading {
  font-size: 20px;
}

